Build 46: CI for 26.2, the inverted biome gate, README and 32 GB launch flags
CI: build number 46, every 26.1.2 string becomes 26.2, the workflow also runs on the v26.2 branch,
the DAB smoke step is gone with DAB, and the hook step points at the worldgen script.

The terrain gate's biome assertion is INVERTED, because the contract inverted. Through build 45
biome climate was secret and the test demanded biomes CHANGE when the secret changed - 9 percent
agreement was a pass. From 46 temperature and vegetation are public, so biomes must STAY when every
secret changes, and must still fall away across level-seeds. Both directions are asserted, because
one of them alone would pass on a broken build.

README is rewritten around the one sentence that is now true: Rolia is Canvas with a secret world
seed, and nothing else differs. It states the public/secret split as a table, the honest limits
(biome borders leak by design, spawn becomes predictable, caves break the surface so terrain matches
about 70 percent of columns, and a plugin you install can read the secret), the five config keys, and
a complete list of what Rolia changes.

Launch scripts retuned from 4G to 32G: Aikar's large-heap G1 settings, ConcGCThreads 4, and the
warning that a 32G heap wants a 40G host because page cache is not free.